# ironpress

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  playground.yml  python.yml  ruby.yml
benches/: conversion.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/src/: lib.rs
bindings/ruby/: Cargo.toml  README.md  ironpress.gemspec
bindings/ruby/ext/ironpress/: extconf.rb
bindings/ruby/lib/: ironpress.rb
bindings/ruby/src/: lib.rs
examples/: convert.rs  invoice.html  multipage.html  report.html
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_css.rs  fuzz_full_pipeline.rs  fuzz_html.rs  fuzz_markdown.rs  fuzz_svg.rs  fuzz_table_flex.rs
playground/: .gitignore  index.html
playground/parity/: index.html
scripts/: compare-parity.sh  generate-references.sh  render-fixtures.sh
src/: bidi.rs  cli.rs  fonts.rs  lib.rs  system_fonts.rs  text.rs  types.rs  util.rs
src/layout/: block.rs  engine.rs  flex.rs  grid.rs  helpers.rs  images.rs  inline.rs  math.rs  mod.rs  paginate.rs  table.rs  text.rs
src/parser/: css.rs  dom.rs  html.rs  jpeg.rs  markdown.rs  math.rs  mod.rs  png.rs  svg.rs  ttf.rs
src/parser/css/: imports.rs  inline.rs  media.rs  mod.rs  model.rs  page.rs  rules.rs  selectors.rs  selectors_tests.rs  spacing.rs  values.rs  values_tests.rs
src/parser/svg/: length.rs  model.rs  node.rs  node_tests.rs  path.rs  path_tests.rs  style.rs  test_support.rs  transform.rs
src/render/: background.rs  mod.rs  pdf.rs  pdf_fonts.rs  shading.rs  svg_geometry.rs  svg_raster.rs  svg_to_pdf.rs
src/render/pdf/: layout_elements.rs
src/security/: mod.rs  sanitizer.rs  svg_sanitizer.rs
src/style/: computed.rs  defaults.rs  resolve.rs  resolve_tests.rs
tests/: parity_tests.rs  pdf_smoke_tests.rs  proptest_properties.rs
tests/fixtures/combined/: resume.html
tests/fixtures/expectations/: combined_article.json  combined_dashboard.json  combined_invoice.json  combined_math-paper.json  combined_resume.json  combined_simple-report.json  edge-cases_deep-nesting.json  edge-cases_empty-elements.json  edge-cases_long-table.json  edge-cases_overflow.json  edge-cases_page-breaks.json  edge-cases_unicode.json  features_backgrounds-advanced.json  features_box-model.json  features_colors-backgrounds.json  features_flexbox.json  features_grid.json  features_images-svg.json  features_math.json  features_positioning.json  features_pseudo-elements.json  features_tables.json  features_transforms.json  features_typography.json
