[package]
name = "ironpress"
version = "0.9.0"
edition = "2024"
rust-version = "1.85"
description = "Pure Rust HTML/CSS/Markdown to PDF converter with layout engine, tables, images, custom fonts, and streaming output. No browser, no system dependencies."
license = "MIT"
repository = "https://github.com/gastongouron/ironpress"
documentation = "https://docs.rs/ironpress"
readme = "README.md"
keywords = ["pdf", "html", "css", "markdown", "converter"]
categories = ["text-processing", "encoding", "template-engine"]
exclude = [".github/", ".claude/", "target/", "docs/"]

[features]
default = []
async = ["tokio"]

[dependencies]
html5ever = "0.27"
markup5ever_rcdom = "0.3"
thiserror = "2"
tokio = { version = "1", features = ["fs", "rt"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
