[package]
name = "ironpress"
version = "1.2.0"
edition = "2024"
rust-version = "1.85"
description = "Pure Rust HTML/CSS/Markdown to PDF converter with layout engine, tables, images, custom fonts, and streaming output. No browser, no system dependencies."
license = "MIT"
repository = "https://github.com/gastongouron/ironpress"
documentation = "https://docs.rs/ironpress"
readme = "README.md"
keywords = ["pdf", "html", "css", "markdown", "converter"]
categories = ["text-processing", "encoding", "template-engine"]
exclude = [".github/", ".claude/", "target/", "docs/"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ironpress"
path = "src/bin/cli.rs"

[features]
default = []
async = ["tokio"]
remote = ["ureq"]
wasm = ["wasm-bindgen", "js-sys"]

[dependencies]
html5ever = "0.27"
pulldown-cmark = "0.12"
markup5ever_rcdom = "0.3"
thiserror = "2"
tokio = { version = "1", features = ["fs", "rt"], optional = true }
ureq = { version = "3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "conversion"
harness = false
